gellary box add

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                       </div>
                     </div>
 
-                    <!-- card-  -->
+                    <!-- card 2-  -->
                     <div class="card m-5 of-card">
                         <img src="https://source.unsplash.com/5fNmWej4tAA" class="card-img-top card-img" alt="card-2-img">
                         <div class="card-body">
@@ -206,13 +206,48 @@
             </div> <!-- end of project-items -->
         </div> <!-- end of projects -->
 
-         <!-- start GELLARY -->
-         <div class="gellary">
-          <div class="gallary-body">
-            <img src="./file/bg-2" alt="">
-            <h1>sdfhgishfghsdfjghsdjfghsjdfhgjsdfhh</h1>
-          </div>
-         </div>  <!-- end of GELLARY -->
+        <!-- start GELLARY -->
+        <div class="gellary">
+          <!-- header  -->
+          <div class="row ">
+            <div class="col ">
+              <h1 class="gellary-tittle">GELLARY</h1>
+            </div>
+          </div> <!-- end of header  -->
+
+          <!-- gellary block 1  -->
+          <div class="row gellary-block">
+            <div class="col-md-3 card gellary-card p-2 mx-4">
+              <img class="gellary-img" src="./file/g1.jpg" alt="">
+            </div>
+            <div class="col-md-3 card gellary-card p-2 mx-4 ">
+              <img class="gellary-img" src="./file/g2.png" alt="">
+            </div>
+            <div class="col-md-3 card gellary-card p-2 mx-4">
+              <img class="gellary-img" src="./file/g3.jpg" alt="">
+            </div>
+            <div class="col-md-3 card gellary-card p-2 mx-4 ">
+              <img class="gellary-img" src="./file/g4.jpg" alt="">
+            </div>
+          </div> <!-- end of gellary block 1  -->
+          <!-- gellary block 2  -->
+          <div class="row gellary-block">
+            <div class="col-md-3 card gellary-card p-2 mx-4">
+              <img class="gellary-img" src="./file/g5.jpg" alt="">
+            </div>
+            <div class="col-md-3 card gellary-card p-2 mx-4">
+              <img class="gellary-img" src="./file/g6.jpg" alt="">
+            </div>
+            <div class="col-md-3 card gellary-card p-2 mx-4">
+              <img class="gellary-img" src="./file/g7.jpg" alt="">
+            </div>
+            <div class="col-md-3 card gellary-card p-2 mx-4">
+              <img class="gellary-img" src="./file/g8.jpg" alt="">
+            </div>
+          </div> <!-- end of gellary block 2  -->
+        </div>  <!-- end of GELLARY -->
+
+
 
         <!-- start of footer  -->
         <footer>
